# any2bed

./: .travis.yml  Cargo.toml  README.md
data/: bioinfo
scripts/: any2bed  any2bed.pl
src/magic/: mod.rs
t/: 02.t  single.bam  single.fasta  single.gbk  single.sam
